<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">

        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name" />

            <item
                android:id="@+id/action_sort_by_date"
                android:title="@string/sort_by_date" />

            <item
                android:id="@+id/action_sort_by_difficulty"
                android:title="@string/sort_by_difficulty" />

        </menu>

    </item>
</menu>